--- a/Day 3/Lecture/day3.ipynb
+++ b/Day 3/Lecture/day3.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "{'num': '1P', 'name': 'Halley', 'epoch': 49400, 'elements': [0.58597811, 0.96714291, 62.26269, 111.33249, 58.42008, 19860205.89532], 'ref': 'JPL J863/77'}\n",
-      "[{'num': '1P', 'name': 'Coyote', 'epoch': 49400, 'elements': [0.58597811, 0.96714291, 62.26269, 111.33249, 58.42008, 19860205.89532], 'ref': 'JPL J863/77'}, {'num': '2P', 'name': 'Coyote', 'epoch': 57720, 'elements': [0.33590577, 0.84833349, 11.77837, 186.56104, 334.56111, 20170310.09194], 'ref': 'JPL K173/2'}, {'num': '3D', 'name': 'Coyote', 'epoch': -9480, 'elements': [0.879073, 0.751299, 13.2164, 221.6588, 250.669, 18321126.6152], 'ref': 'IAUCAT03'}, {'num': '4P', 'name': 'Coyote', 'epoch': 57262, 'elements': [1.65187634, 0.56961755, 9.07029, 205.12582, 199.14398, 20140529.86872], 'ref': 'JPL K144/7'}, {'num': '5D', 'name': 'Coyote', 'epoch': 7440, 'elements': [0.589847, 0.809796, 29.3821, 14.9468, 102.9676, 18790331.0341], 'ref': 'IAUCAT03'}, {'num': '6P', 'name': 'Coyote', 'epoch': 57200, 'elements': [1.36145455, 0.61142192, 19.48168, 178.11523, 138.93371, 20150302.4187], 'ref': 'JPL K155/3'}, {'num': '7P', 'name': 'Coyote', 'epoch': 57380, 'elements': [1.23896144, 0.63761701, 22.33509, 172.50006, 93.4096, 20150130.53022], 'ref': 'JPL K088/17'}, {'num': '8P', 'name': 'Coyote', 'epoch': 54374, 'elements': [1.02711659, 0.81979975, 54.98318, 207.50925, 270.34165, 20080127.02555], 'ref': 'JPL K074/27'}, {'num': '9P', 'name': 'Coyote', 'epoch': 57375, 'elements': [1.54236947, 0.5098192, 10.47332, 179.18727, 68.76828, 20160802.55955], 'ref': 'JPL 160'}, {'num': '10P', 'name': 'Coyote', 'epoch': 57262, 'elements': [1.41764523, 0.5373524, 12.02891, 195.54767, 117.80539, 20151114.25866], 'ref': 'JPL K1013/12'}]\n"
+      "{'num': '3D', 'name': 'Coyote', 'epoch': -9480, 'elements': [0.879073, 0.751299, 13.2164, 221.6588, 250.669, 18321126.6152], 'ref': 'IAUCAT03'}\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
     "for line in data:\n",
     "    line['name'] = 'Coyote'\n",
     "    \n",
-    "print(data)"
+    "print(data[2])"
    ]
   },
   {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
     "        line_str = \"\"\n",
     "        for key, value in line.items():\n",
     "            if key == \"elements\":\n",
-    "                line_str += \",\".join([f\"{v:.3f}\" for v in value])\n",
+    "                line_str += \",\".join(map(\"{:.3f}\".format, value))\n",
     "            else:\n",
     "                line_str += str(value)\n",
     "            line_str += \",\"\n",
@@ -396,6 +396,189 @@
     "with open(new_file, \"a\") as f:\n",
     "    f.write(\"Wile E. Coyote was here...\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n",
+      "3.141592653589793\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print(math.sqrt(2))\n",
+    "\n",
+    "print(math.pi)\n",
+    "\n",
+    "print(math.log10(100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n",
+      "0.9069402680849336\n",
+      "0.7379736910539632\n",
+      "0.29995849884347486\n",
+      "0.7507629532676002\n",
+      "2.1387214836246384\n",
+      "1.7823723963482698\n",
+      "1.1884345470851194\n",
+      "-0.2853405319113513\n",
+      "-0.5348676285487685\n",
+      "0.5825158848911993\n",
+      "-0.5075952342395844\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.11788447,  2.96879035, -1.07495101,  0.36037234, -1.71690903,\n",
+       "        0.89018477, -1.38031966,  0.96766349,  1.47128263,  0.05439361])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import random as r\n",
+    "\n",
+    "print(r.randint(1, 100))\n",
+    "print(r.random())\n",
+    "for _ in range(10):\n",
+    "    print(r.gauss(0, 1))\n",
+    "    \n",
+    "import numpy as np\n",
+    "display(np.random.normal(0, 1, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['data.txt', 'day3.ipynb', 'new_dir', 'true_data.txt']\n",
+      "c:\\Users\\Jared\\OneDrive\\Western\\Courses\\Python Bootcamp\\Day 3\\Lecture\n",
+      "c:\\Users\\Jared\\OneDrive\\Western\\Courses\\Python Bootcamp\\Day 3\n",
+      "c:\\Users\\Jared\\OneDrive\\Western\\Courses\\Python Bootcamp\\Day 3\\Lecture\\new_dir\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(os.listdir(\".\"))\n",
+    "print(os.getcwd())\n",
+    "os.chdir(\"..\")\n",
+    "print(os.getcwd())\n",
+    "os.chdir(\"Lecture\")\n",
+    "\n",
+    "new_dir = os.path.join(os.getcwd(), \"new_dir\")\n",
+    "print(new_dir)\n",
+    "\n",
+    "if not os.path.exists(new_dir):\n",
+    "    os.mkdir(new_dir)\n",
+    "else:\n",
+    "    os.rmdir(new_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"topsecret.txt\"\n",
+    "file_path = os.path.join(os.getcwd(), file_name)\n",
+    "\n",
+    "with open(file_path, \"w\") as f:\n",
+    "    f.write(\"This is a secret.\")\n",
+    "    \n",
+    "import time\n",
+    "if os.path.exists(file_path):\n",
+    "    time.sleep(2)\n",
+    "    os.remove(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "with open(file_path, \"w\") as f:\n",
+    "    f.write(\"This is a secret.\")\n",
+    "\n",
+    "shutil.copy(file_path, \"topsecret_copy.txt\") # Copies contents\n",
+    "shutil.copy2(file_path, \"topsecret_copy2.txt\") # Copies contents and metadata\n",
+    "shutil.move(file_path, \"topsecret_move.txt\") # Moves file\n",
+    "\n",
+    "time.sleep(2)\n",
+    "if os.path.exists(file_path):\n",
+    "    os.remove(file_path)\n",
+    "if os.path.exists(\"topsecret_copy.txt\"):\n",
+    "    os.remove(\"topsecret_copy.txt\")\n",
+    "if os.path.exists(\"topsecret_copy2.txt\"):\n",
+    "    os.remove(\"topsecret_copy2.txt\")\n",
+    "if os.path.exists(\"topsecret_move.txt\"):\n",
+    "    os.remove(\"topsecret_move.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcPi(100) = 3.36\n",
+      "calcPi(100_000) = 3.14144\n",
+      "calcPi(100_000_000) = 3.14146656\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy.random as npr\n",
+    "def calcPi(iters: int = 100) -> float:\n",
+    "    points = npr.random((iters, 2))\n",
+    "    circle_count = points[points[:, 0]**2 + points[:, 1]**2 <= 1].shape[0]\n",
+    "    return 4 * circle_count / iters\n",
+    "\n",
+    "print(f\"{calcPi(100) = }\")\n",
+    "print(f\"{calcPi(100_000) = }\")\n",
+    "print(f\"{calcPi(100_000_000) = }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
