added github tutorial

--- a/Day 3/Hands On/github.ipynb
+++ b/Day 3/Hands On/github.ipynb
@@ -6,19 +6,36 @@
    "source": [
     "# How to Git\n",
     "\n",
-    "ssh-keygen -t ed25519 -C \"your_email@example.com\"\n",
-    "- Then add the key to github\n",
+    "0. May be necessary to create an SSH key\n",
     "\n",
-    "git branch\n",
-    "git branch \\< branch name \\>\n",
+    "```ssh-keygen -t ed25519 -C \"your_email@example.com\"```\n",
     "\n",
-    "git add -all\n",
-    "git add \\< file \\> ...\n",
+    "1. Create a new repository on the command line\n",
+    "   \n",
+    "```git init```\n",
     "\n",
-    "git commit -m \"message\"\n",
+    "2. Create the repository on GitHub\n",
+    "   \n",
+    "```git remote add origin <link>```\n",
     "\n",
-    "git push\n",
-    "git pull"
+    "3. Select you branch (optional: defaults to master / main)\n",
+    "   \n",
+    "```git branch```\n",
+    "\n",
+    "```git branch <branch>```\n",
+    "\n",
+    "4. Add files to the staging area\n",
+    "   \n",
+    "```git add --all```\n",
+    "```git add <file>```\n",
+    "\n",
+    "5. Commit the files, adding a message\n",
+    "   \n",
+    "```git commit -m \"message\"```\n",
+    "\n",
+    "6. Push the files to the remote repository\n",
+    "```git push```\n",
+    "```git pull```"
    ]
   }
  ],
