Added more detailed instructions

--- a/Day 3/Hands On/github.ipynb
+++ b/Day 3/Hands On/github.ipynb
@@ -6,37 +6,51 @@
    "source": [
     "# How to Git\n",
     "\n",
-    "0. May be necessary to create an SSH key\n",
+    "### May be necessary to create an SSH key\n",
+    "\n",
+    "Useful resources:\n",
+    "\n",
+    "[Generate an SSH key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)\n",
+    "\n",
+    "[Adding an SSH on Github](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account)\n",
     "\n",
     "```ssh-keygen -t ed25519 -C \"your_email@example.com\"```\n",
     "\n",
-    "1. Create a new repository on the command line\n",
+    "### Create a new repository on the command line\n",
+    "\n",
+    "Within the folder you wish to create the repostory in, write the following in a terminal:\n",
     "   \n",
     "```git init```\n",
     "\n",
-    "2. Create the repository on GitHub\n",
+    "### Create the repository on GitHub\n",
+    "\n",
+    "Find the link in the upper right corner of the newly created repository on github\n",
     "   \n",
     "```git remote add origin <link>```\n",
     "\n",
-    "3. Select you branch (optional: defaults to master / main)\n",
+    "### Select you branch (optional: defaults to master / main)\n",
+    "\n",
+    "This isn't necessary, as github creates a master branch by default\n",
     "   \n",
     "```git branch```\n",
     "\n",
     "```git branch <branch>```\n",
     "\n",
-    "4. Add files to the staging area\n",
+    "### Add files to the staging area\n",
     "   \n",
     "```git add --all```\n",
     "\n",
     "```git add <file>```\n",
     "\n",
-    "5. Commit the files, adding a message\n",
+    "### Commit the files, adding a message\n",
     "   \n",
     "```git commit -m \"message\"```\n",
     "\n",
-    "6. Push the files to the remote repository\n",
+    "### Push the files to the remote repository\n",
+    "\n",
     "```git push```\n",
-    "```git pull```"
+    "\n",
+    "```git pull```\n"
    ]
   }
  ],
